--- a/trunk/JasonAnnotations/Makefile
+++ b/trunk/JasonAnnotations/Makefile
@@ -5,14 +5,13 @@ CLASSES=$(patsubst src/%.java,build/classes/%.class,$(SOURCES))
 
 all: dist/JasonAnnotations.jar
 
-dist/JasonAnnotations.jar: $(CLASSES) dist
+dist/JasonAnnotations.jar: $(CLASSES)
+	@mkdir -p dist
 	jar cf $@ -C build/classes jason
 
-build/classes/%.class: src/%.java build/classes
+build/classes/%.class: src/%.java
+	@mkdir -p build/classes
 	javac -cp build/classes -d build/classes -sourcepath src $<
-
-build/classes dist:
-	-mkdir -p $@
 
 clean:
 	rm -rf build dist
