--- a/trunk/JasonExample/Makefile
+++ b/trunk/JasonExample/Makefile
@@ -12,10 +12,12 @@ CLASSES=$(MAIN_CLASSES) $(TEST_CLASSES)
 
 all: $(MAIN_CLASSES)
 
-build/classes/%.class: src/%.java build/classes
+build/classes/%.class: src/%.java
+	@mkdir -p build/classes
 	javac -d build/classes -sourcepath src -cp $(CLASSPATH) $<
 
-build/test/classes/%.class: test/%.java build/test/classes
+build/test/classes/%.class: test/%.java
+	@mkdir -p build/test/classes
 	javac -d build/test/classes -sourcepath test -cp $(TEST_CLASSPATH) $<
 
 build/classes/BankService.wsdl: build/classes/bank/Bank.class
@@ -44,8 +46,5 @@ runclient: build/classes/client/Client.class
 test: $(TEST_CLASSES)
 	java -cp $(TEST_CLASSPATH) org.junit.runner.JUnitCore $(TESTS)
 
-build/%:
-	mkdir -p $@
-
 clean:
-	rm -rf build/classes/*
+	rm -rf build
